--- a/wdb.html
+++ b/wdb.html
@@ -2,9 +2,6 @@
     <head>
     </head>
     <body>
-        <form action="/action_page.php">
-            <label for="weekdays">주를 선택하세요</label>
-            <input type="week" id="weekdays" >
-        </form>
+        <p>webhosting check</p>
     </body>
 </html>
